[project]
name = "Iaso"
readme = "README.md"
requires-python = "~=3.9"

[project.urls]
Repository = "https://github.com/BLSQ/"

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "locust",
    "node_modules",
    "notebooks",
    "src/django-webpack-loader",
]
indent-width = 4
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "ARG", # flake8-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "EM",  # flake8-errmsg
    "F",   # flake8
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "RET", # flake8-return
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "T10", # flake8-print
    "UP",  # pyupgrade
    # Disabled rules.
    # "C90", # mccabe complexity
    # "G",   # flake8-logging-format
    # "PT",  # flake8-pytest-style
    # "PTH", # flake8-use-pathlib
    # "RUF", # ruff-specific rules
    # "TCH", # flake8-type-checking
    # "TRY", # tryceratops
]
# https://docs.astral.sh/ruff/rules
ignore = [
    # flake8-unused-arguments (ARG).
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
    "ARG004",  # unused-static-method-argument
    "ARG005",  # unused-lambda-argument
    # flake8-bugbear (B).
    "B006",    # mutable-argument-default
    "B007",    # unused-loop-control-variable
    "B011",    # assert-false
    "B018",    # useless-expression
    "B020",    # loop-variable-overrides-iterator
    "B021",    # f-string-docstring
    "B032",    # unintentional-type-annotation
    "B904",    # raise-without-from-inside-except
    # flake8-comprehensions (C4).
    "C400",    # unnecessary-generator-list
    "C401",    # unnecessary-generator-set
    "C403",    # unnecessary-list-comprehension-set
    "C405",    # unnecessary-literal-set
    "C408",    # unnecessary-collection-call
    "C414",    # unnecessary-double-cast-or-process
    "C416",    # unnecessary-comprehension
    "C417",    # unnecessary-map
    "C419",    # unnecessary-comprehension-in-call
    # flake8-django (DJ).
    "DJ001",   # django-nullable-model-string-field
    "DJ007",   # django-all-with-model-form
    "DJ008",   # django-model-without-dunder-str
    "DJ012",   # django-unordered-body-content-in-model
    # flake8-datetimez (DTZ).
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ002",  # call-datetime-today
    "DTZ003",  # call-datetime-utcnow
    "DTZ004",  # call-datetime-utcfromtimestamp
    "DTZ005",  # call-datetime-now-without-tzinfo
    "DTZ006",  # call-datetime-fromtimestamp
    "DTZ007",  # call-datetime-strptime-without-zone
    "DTZ011",  # call-date-today
    # Error (E).
    "E402",    # module-import-not-at-top-of-file
    "E501",    # line-too-long
    "E711",    # none-comparison
    "E712",    # true-false-comparison
    "E721",    # type-comparison
    "E722",    # bare-except
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    # flake8-errmsg (EM).
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    # Pyflakes (F).
    "F403",    # undefined-local-with-import-star
    "F405",    # undefined-local-with-import-star-usage
    "F601",    # multi-value-repeated-key-literal
    "F811",    # redefined-while-unused
    "F821",    # undefined-name
    "F841",    # unused-variable
    # pep8-naming (N).
    "N801",    # invalid-class-name
    "N802",    # invalid-function-name
    "N803",    # invalid-argument-name
    "N805",    # invalid-first-argument-name-for-method
    "N806",    # non-lowercase-variable-in-function
    "N815",    # mixed-case-variable-in-class-scope
    "N817",    # camelcase-imported-as-acronym
    "N818",    # error-suffix-on-exception-name
    "N999",    # invalid-module-name
    # flake8-return (RET).
    "RET503",  # implicit-return
    "RET504",  # unnecessary-assign
    # flake8-simplify (SIM).
    "SIM102",  # collapsible-if
    "SIM103",  # needless-bool
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM110",  # reimplemented-builtin
    "SIM113",  # enumerate-for-loop
    "SIM115",  # open-file-with-context-handler
    "SIM117",  # multiple-with-statements
    "SIM118",  # in-dict-keys
    "SIM201",  # negate-equal-op
    "SIM210",  # if-expr-with-true-false
    "SIM211",  # if-expr-with-false-true
    # pyupgrade (UP).
    "UP006",   # non-pep585-annotation
    "UP008",   # super-call-with-parameters
    "UP022",   # replace-stdout-stderr
    "UP028",   # yield-in-for-loop
    "UP030",   # format-literals
    "UP031",   # printf-string-formatting
    "UP035",   # deprecated-import
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
lines-between-types = 1
